Aligning annual report title and fixing Four24 facebook image [deploy:live]

--- a/bin-static/articles/superfriendly-annual-report-2012/superfriendly-annual-report-2012.css
+++ b/bin-static/articles/superfriendly-annual-report-2012/superfriendly-annual-report-2012.css
@@ -8,7 +8,7 @@
         #superfriendly-annual-report-2012 .article-footer p { font-size: 70%; }
         
     #superfriendly-annual-report-2012 .topic { border-top: 1px solid #e3e3e3; padding: 2em 0 0.5em; }
-        #superfriendly-annual-report-2012 h1 { text-transform: uppercase; font: normal 30px 'Trebuchet MS', Arial, sans-serif; color: #a3a3a3; text-align: center; }
+        #superfriendly-annual-report-2012 h1 { text-transform: uppercase; font: normal 30px 'Trebuchet MS', Arial, sans-serif; color: #a3a3a3; }
         
         #superfriendly-annual-report-2012 .article-title { font-size: 41px; color: #464646; }
     
